@@ -58,7 +58,7 @@ public abstract class BaseWizardPage extends BaseOwoScreen<StackLayout> {
     private final Identifier backgroundTexture;
     private final WizardPageInfo pageInfo;
 
-    private static ModpackInfo info = PackCore.getModpackInfo();
+    private static final ModpackInfo info = PackCore.getModpackInfo();
 
     protected BaseWizardPage(@NotNull WizardPageInfo pageInfo, @Nullable Identifier backgroundTexture) {
         super(pageInfo.title());
@@ -174,7 +174,7 @@ public abstract class BaseWizardPage extends BaseOwoScreen<StackLayout> {
                 .positioning(Positioning.relative(100, 0));
 
         // Main message section
-        FlowLayout messageSection = (FlowLayout) Containers.verticalFlow(Sizing.expand(), Sizing.content())
+        FlowLayout messageSection = Containers.verticalFlow(Sizing.expand(), Sizing.content())
                 .gap(4);
 
         // Status header with icon
@@ -271,11 +271,11 @@ public abstract class BaseWizardPage extends BaseOwoScreen<StackLayout> {
                 Text.literal("Cancel"),
                 button -> {
                     // Remove the overlay
-                    confirmOverlay.removeChild(confirmOverlay.children().get(confirmOverlay.children().size() - 1));
+                    confirmOverlay.removeChild(confirmOverlay.children().getLast());
                 }
         ).renderer(ButtonComponent.Renderer.texture(Identifier.of(MOD_ID, "textures/gui/wizard/button.png"), 0, 0, 100, 60))
                 .horizontalSizing(Sizing.fixed(100))
-                .verticalSizing(Sizing.fixed(20));;
+                .verticalSizing(Sizing.fixed(20));
 
         ButtonComponent confirmButton = (ButtonComponent) Components.button(
                 Text.literal("Reset & Exit"),
@@ -379,9 +379,7 @@ public abstract class BaseWizardPage extends BaseOwoScreen<StackLayout> {
 
         ButtonComponent discord = (ButtonComponent) Components.button(
                 Text.empty(),
-                button -> {
-                    Util.getOperatingSystem().open(info.getDiscord());
-                }
+                button -> Util.getOperatingSystem().open(info.getDiscord())
         )
                 .renderer(ButtonComponent.Renderer.texture(Identifier.of(MOD_ID, "textures/gui/menu/discord_icon.png"), 0, 0, 22, 22))
                 .horizontalSizing(Sizing.fixed(22))
@@ -389,9 +387,7 @@ public abstract class BaseWizardPage extends BaseOwoScreen<StackLayout> {
 
         ButtonComponent modrinth = (ButtonComponent) Components.button(
                         Text.empty(),
-                        button -> {
-                            Util.getOperatingSystem().open(info.getWebsite());
-                        }
+                        button -> Util.getOperatingSystem().open(info.getWebsite())
                 )
                 .renderer(ButtonComponent.Renderer.texture(Identifier.of(MOD_ID, "textures/gui/menu/modrinth_icon.png"), 0, 0, 22, 22))
                 .horizontalSizing(Sizing.fixed(22))
@@ -399,9 +395,7 @@ public abstract class BaseWizardPage extends BaseOwoScreen<StackLayout> {
 
         ButtonComponent github = (ButtonComponent) Components.button(
                         Text.empty(),
-                        button -> {
-                            Util.getOperatingSystem().open(info.getIssueTracker());
-                        }
+                        button -> Util.getOperatingSystem().open(info.getIssueTracker())
                 )
                 .renderer(ButtonComponent.Renderer.texture(Identifier.of(MOD_ID, "textures/gui/menu/github_icon.png"), 0, 0, 22, 22))
                 .horizontalSizing(Sizing.fixed(22))
@@ -507,25 +501,8 @@ public abstract class BaseWizardPage extends BaseOwoScreen<StackLayout> {
 
     // Helper classes
 
-    private static class StatusInfo {
-        final String icon;
-        final String title;
-        final String message;
-        final String additionalInfo;
-        final int backgroundColor;
-        final int borderColor;
-        final boolean showResetButton;
-
-        StatusInfo(String icon, String title, String message, String additionalInfo,
-                   int backgroundColor, int borderColor, boolean showResetButton) {
-            this.icon = icon;
-            this.title = title;
-            this.message = message;
-            this.additionalInfo = additionalInfo;
-            this.backgroundColor = backgroundColor;
-            this.borderColor = borderColor;
-            this.showResetButton = showResetButton;
-        }
+    private record StatusInfo(String icon, String title, String message, String additionalInfo, int backgroundColor,
+                              int borderColor, boolean showResetButton) {
     }
 
     public record WizardPageInfo(
