@@ -66,7 +66,7 @@ public class GuideUtil {
         }
 
         // Extract title (first line, remove markdown heading syntax)
-        String title = lines.get(0).replaceFirst("^#+\\s*", "").trim();
+        String title = lines.getFirst().replaceFirst("^#+\\s*", "").trim();
 
         if (title.isEmpty()) {
             title = filePath.getFileName().toString().replace(".md", "");
@@ -86,10 +86,10 @@ public class GuideUtil {
             }
 
             // Remove markdown formatting for cleaner preview
-            String cleanLine = line.replaceAll("^[>\\-\\*\\+]\\s*", "") // Remove blockquote and list markers
+            String cleanLine = line.replaceAll("^[>\\-*+]\\s*", "") // Remove blockquote and list markers
                     .replaceAll("\\*\\*(.*?)\\*\\*", "$1") // Remove bold
                     .replaceAll("\\*(.*?)\\*", "$1")       // Remove italic
-                    .replaceAll("\\[([^\\]]+)\\]\\([^\\)]+\\)", "$1") // Remove links, keep text
+                    .replaceAll("\\[([^]]+)]\\([^)]+\\)", "$1") // Remove links, keep text
                     .replaceAll("`([^`]+)`", "$1");        // Remove inline code
 
             if (!cleanLine.isEmpty()) {
@@ -122,14 +122,14 @@ public class GuideUtil {
     /**
      * Loads the full content of a guide (with caching)
      */
-    public static String loadGuideContent(GuideInfo guide) {
+    public static void loadGuideContent(GuideInfo guide) {
         String fileName = guide.getFilePath().getFileName().toString();
 
         // Check cache first
         String cachedContent = CONTENT_CACHE.get(fileName);
         if (cachedContent != null) {
             guide.setFullContent(cachedContent);
-            return cachedContent;
+            return;
         }
 
         // Load from file
@@ -137,10 +137,8 @@ public class GuideUtil {
             String content = Files.readString(guide.getFilePath());
             CONTENT_CACHE.put(fileName, content);
             guide.setFullContent(content);
-            return content;
         } catch (IOException e) {
             PackCore.LOGGER.error("Failed to load guide content: {}", guide.getFilePath(), e);
-            return "# Error\n\nFailed to load guide content.";
         }
     }
 
